--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -438,32 +438,12 @@ jobs:
           name: devildex-linux-wheel-artifact
           path: dist/linux-wheel
 
-      - name: Debug Linux Wheel artifact download
-        if: steps.get_version.outputs.version != 'null'
-        run: |
-          echo "Current directory: $(pwd)"
-          echo "Contents of dist/linux-wheel:"
-          ls -R dist/linux-wheel
-          find dist/linux-wheel -name "*.whl"
-
-      - name: Unzip Linux Wheel artifact
-        if: steps.get_version.outputs.version != 'null'
-        run: unzip dist/linux-wheel/*.zip -d dist/linux-wheel
-
       - name: Download Linux Bundle
         if: steps.get_version.outputs.version != 'null'
         uses: actions/download-artifact@v4
         with:
           name: devildex-linux-bundle
           path: dist/linux-bundle
-
-      - name: Debug Linux Bundle artifact download
-        if: steps.get_version.outputs.version != 'null'
-        run: |
-          echo "Current directory: $(pwd)"
-          echo "Contents of dist/linux-bundle:"
-          ls -R dist/linux-bundle
-          find dist/linux-bundle -name "*.zip"
 
       - name: Unzip Linux Bundle artifact
         if: steps.get_version.outputs.version != 'null'
@@ -476,14 +456,6 @@ jobs:
           name: devildex-macos-wheel-artifact
           path: dist/macos-wheel
 
-      - name: Debug macOS Wheel artifact download
-        if: steps.get_version.outputs.version != 'null'
-        run: |
-          echo "Current directory: $(pwd)"
-          echo "Contents of dist/macos-wheel:"
-          ls -R dist/macos-wheel
-          find dist/macos-wheel -name "*.whl"
-
       - name: Unzip macOS Wheel artifact
         if: steps.get_version.outputs.version != 'null'
         run: unzip dist/macos-wheel/*.zip -d dist/macos-wheel
@@ -494,14 +466,6 @@ jobs:
         with:
           name: devildex-macos-bundle
           path: dist/macos-bundle
-
-      - name: Debug macOS Bundle artifact download
-        if: steps.get_version.outputs.version != 'null'
-        run: |
-          echo "Current directory: $(pwd)"
-          echo "Contents of dist/macos-bundle:"
-          ls -R dist/macos-bundle
-          find dist/macos-bundle -name "*.zip"
 
       - name: Unzip macOS Bundle artifact
         if: steps.get_version.outputs.version != 'null'
@@ -514,14 +478,6 @@ jobs:
           name: devildex-windows-wheel-artifact
           path: dist/windows-wheel
 
-      - name: Debug Windows Wheel artifact download
-        if: steps.get_version.outputs.version != 'null'
-        run: |
-          echo "Current directory: $(pwd)"
-          echo "Contents of dist/windows-wheel:"
-          ls -R dist/windows-wheel
-          find dist/windows-wheel -name "*.whl"
-
       - name: Unzip Windows Wheel artifact
         if: steps.get_version.outputs.version != 'null'
         run: unzip dist/windows-wheel/*.zip -d dist/windows-wheel
@@ -533,14 +489,6 @@ jobs:
           name: devildex-windows-bundle
           path: dist/windows-bundle
 
-      - name: Debug Windows Bundle artifact download
-        if: steps.get_version.outputs.version != 'null'
-        run: |
-          echo "Current directory: $(pwd)"
-          echo "Contents of dist/windows-bundle:"
-          ls -R dist/windows-bundle
-          find dist/windows-bundle -name "*.zip"
-
       - name: Unzip Windows Bundle artifact
         if: steps.get_version.outputs.version != 'null'
         run: unzip dist/windows-bundle/*.zip -d dist/windows-bundle
@@ -551,14 +499,6 @@ jobs:
         with:
           name: devildex-documentation-artifact
           path: dist/documentation
-
-      - name: Debug Documentation artifact download
-        if: steps.get_version.outputs.version != 'null'
-        run: |
-          echo "Current directory: $(pwd)"
-          echo "Contents of dist/documentation:"
-          ls -R dist/documentation
-          find dist/documentation -name "*"
 
       - name: Unzip Documentation artifact
         if: steps.get_version.outputs.version != 'null'
@@ -584,7 +524,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/linux-wheel/*.whl
+          asset_path: ./dist/linux-wheel/devildex-*-py3-none-any.whl
           asset_name: devildex-linux-wheel-v${{ steps.get_version.outputs.version }}.whl
           asset_content_type: application/zip
 
@@ -606,7 +546,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/macos-wheel/*.whl
+          asset_path: ./dist/macos-wheel/devildex-*-py3-none-any.whl
           asset_name: devildex-macos-wheel-v${{ steps.get_version.outputs.version }}.whl
           asset_content_type: application/zip
 
@@ -628,7 +568,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/windows-wheel/*.whl
+          asset_path: ./dist/windows-wheel/devildex-*-py3-none-any.whl
           asset_name: devildex-windows-wheel-v${{ steps.get_version.outputs.version }}.whl
           asset_content_type: application/zip
 
@@ -650,6 +590,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/documentation/*
+          asset_path: ./dist/documentation/*.zip
           asset_name: devildex-documentation-v${{ steps.get_version.outputs.version }}.zip
           asset_content_type: application/zip
